Fixed infamous error FIX it's TopongoConfigS not TopongoConfig, my bad (and I, myself named it...)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 
-[submodule "bugl/TopongoConfig"]
-	path = bugl/TopongoConfig
+[submodule "bugl/TopongoConfigs"]
+	path = bugl/TopongoConfigs
 	url = https://github.com/topongo/TopongoConfigs
